Added wrapper around the render error from the dedicated server itself #1 Increased server autostart interval to 10 minutes Updated documentation Cleanup Dockerfile

--- a/etc/supervisor/conf.d/theforest.conf
+++ b/etc/supervisor/conf.d/theforest.conf
@@ -10,7 +10,7 @@ stdout_logfile_maxbytes=0
 environment =
     WINEARCH=win64,
     DISPLAY=:1.0
-command=wine /theforest/TheForestDedicatedServer.exe -batchmode -nographics -savefolderpath /theforest/saves -configfilepath /theforest/config/config.cfg
+command=./wrapper.sh wine /theforest/TheForestDedicatedServer.exe -batchmode -nographics -savefolderpath /theforest/saves -configfilepath /theforest/config/config.cfg
 autostart=false
 autorestart=false
 redirect_stderr=true
