--- a/server.cfg.example
+++ b/server.cfg.example
@@ -18,7 +18,7 @@ serverPassword
 // Server administration password. blank means no password
 serverPasswordAdmin
 // Your Steam account name. blank means anonymous
-serverSteamAccount ###serverSteamAccount###
+serverSteamAccount ##serverSteamAccount##
 // Time between server auto saves in minutes - The minumum time is 15 minutes, the default time is 30
 serverAutoSaveInterval 30
 // Game difficulty mode. Must be set to Peaceful Normal or Hard
