--- a/.github/workflows/docker-build-and-push-prod.yml
+++ b/.github/workflows/docker-build-and-push-prod.yml
@@ -1,12 +1,15 @@
-name: docker-build-and-push-ci
+name: docker-build-and-push-master-ci
 
 on:
-  push:
-    branches:
-      - 'master'
+  workflow_run:
+    workflows:
+      - Unit-test       # Wait for the "Unit-test" workflow to complete
+    types:
+      - completed       # Trigger only when "Unit-test" completes
 
 jobs:
   docker-build-gameserver-image:
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/master' }} # Run only if tests pass and branch is "develop"
     runs-on: ubuntu-latest
     steps:
       -
