--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -78,3 +78,4 @@ jobs:
         run: |
             docker stop the-forest-dedicated-server
             docker rm the-forest-dedicated-server
+            docker rmi ${{ github.run_id }}
