--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Wait for server to start
         run: |
             START_TIME=$(date +%s)
+            echo "TIMEOUT_SECONDS: ${{ vars.TIMEOUT_SECONDS }}"
 
             # Set the timezone to Germany (Central European Time)
             export TZ=Europe/Berlin
